--- a/zabbix-4.4.7/server/Dockerfile
+++ b/zabbix-4.4.7/server/Dockerfile
@@ -133,7 +133,7 @@ VOLUME ["/usr/lib/zabbix/alertscripts", "/usr/lib/zabbix/externalscripts", "/var
 VOLUME ["/var/lib/zabbix/snmptraps", "/var/lib/zabbix/ssh_keys", "/var/lib/zabbix/ssl/certs", "/var/lib/zabbix/ssl/keys", "/var/lib/zabbix/ssl/ssl_ca"]
 VOLUME ["/var/lib/zabbix/export"]
 
-COPY ["docker-entrypoint.sh", "/usr/bin/"]
+COPY ["zabbix-4.4.7/server/docker-entrypoint.sh", "/usr/bin/"]
 
 ENTRYPOINT ["/sbin/tini", "--", "/usr/bin/docker-entrypoint.sh"]
 
